Fix margin-left for timer-countdown on mobile

--- a/frontend/src/components/organisms/TopNavigation.scss
+++ b/frontend/src/components/organisms/TopNavigation.scss
@@ -45,7 +45,11 @@ nav .sidenav-trigger {
     margin-left: 20px;
   }
 }
-
+@media only screen and (min-device-width: 300px) and (max-device-width: 600px) {
+  .mini-controls .timer-countdown {
+    margin-left: 10px;
+  }
+}
 @media only screen and (min-width: 995px) {
   .logo-icon {
     margin: 0px 10px 0 20px;
